Avoid `inherit` property for better code readability.

--- a/assets/css/01-typography.css
+++ b/assets/css/01-typography.css
@@ -55,6 +55,8 @@ h4 {
   font-family: "--agisty-font-head", system-ui, -apple-system, sans-serif;
 }
 
+code,
+kbd,
 pre {
   font-family: "--agisty-font-mono", "SF Mono", Menlo, "Fira Mono", monospace;
 }
@@ -67,7 +69,7 @@ sup,
 sub,
 .sup,
 .sub {
-  font-size: inherit;
+  font-size: var(--agisty-font-size-rg, 1em);
   vertical-align: baseline;
 }
 
